--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <head>
 <title>TruthFinder</title>
-<link rel="icon" type="image/x-icon" href="truthfinder-icon.ico">
+<link rel="icon" type="image/x-icon" href="images/truthfinder-icon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1.0;">
 <meta charset="UTF-8">
 </head>
 
 <body>
 <div class="title">
-<a href="https://truegiftcorp.github.io/truegiftcorp" target="_blank"><img src="images/logo-title-white.png" width="333px"></img></a>
+<a href="https://truegiftcorp.github.io/truegiftcorp" target="_blank"><img src="images/truegiftcorp-logo.png" width="333px"></img></a>
 </div>
 
 <div class="page"> 
 
-<img src="truth-title.png"></img>
+<img src="images/truegiftcorp-logo.png"></img>
 
 <div class="moteur">
 <p id="Display0">‎</p>
