--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="page"> 
 
-<img src="images/truegiftcorp-logo.png"></img>
+<img src="images/truthfinder-logo.png"></img>
 
 <div class="moteur">
 <p id="Display0">‎</p>
